--- a/nginx.conf
+++ b/nginx.conf
@@ -4,137 +4,16 @@ worker_processes  auto;
 error_log  /home/martin/pkb/stream_refused_repro/error.log notice;
 pid        /home/martin/pkb/stream_refused_repro/nginx.pid;
 
-
 events {
     worker_connections  1024;
 }
 
-
 http {
-    #include       /etc/nginx/mime.types;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    #gzip  on;
-
-    #include /etc/nginx/conf.d/*.conf;
-    
-    ############################################################
-	aio                 threads;
-	aio_write           on;
-	
-	tcp_nopush          on;
-	tcp_nodelay         on;
-	
-	log_subrequest      on;
-	
-	reset_timedout_connection on;
-	
-	keepalive_timeout  75s;
-	#keepalive_requests 100;
-	
-	client_body_temp_path           /tmp/client-body;
-	fastcgi_temp_path               /tmp/fastcgi-temp;
-	proxy_temp_path                 /tmp/proxy-temp;
-	
-	client_header_buffer_size       1k;
-	client_header_timeout           60s;
-	large_client_header_buffers     4 8k;
-	client_body_buffer_size         8k;
-	client_body_timeout             60s;
-	
-	http2_max_field_size            4k;
-	http2_max_header_size           16k;
-	http2_max_requests              1000;
-	http2_max_concurrent_streams    512;
-	
-	types_hash_max_size             2048;
-	server_names_hash_max_size      1024;
-	server_names_hash_bucket_size   128;
-	map_hash_bucket_size            64;
-	
-	proxy_headers_hash_max_size     512;
-	proxy_headers_hash_bucket_size  64;
-	
-	variables_hash_bucket_size      256;
-	variables_hash_max_size         2048;
-	
-	underscores_in_headers          off;
-	ignore_invalid_headers          on;
-	
-	limit_req_status                503;
-	limit_conn_status               503;
-	
-	#include /etc/nginx/mime.types;
 	default_type text/html;
-	
-	# Custom headers for response
-	
-	server_tokens off;
-	
-	# disable warnings
-	uninitialized_variable_warn off;
-	
-	# Additional available variables:
-	# $namespace
-	# $ingress_name
-	# $service_name
-	# $service_port
-	log_format upstreaminfo '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $request_length $request_time $upstream_addr $upstream_response_length $upstream_response_time $upstream_status ';
-	
-	map $request_uri $loggable {
-		
-		default 1;
-	}
-	
-	access_log /home/martin/pkb/stream_refused_repro/access.log upstreaminfo  if=$loggable;
-	
+	access_log /home/martin/pkb/stream_refused_repro/access.log;
 	error_log  /home/martin/pkb/stream_refused_repro/error.log notice;
-	
-	resolver 10.20.0.10 valid=30s ipv6=off;
-	
-	# See https://www.nginx.com/blog/websocket-nginx
-	map $http_upgrade $connection_upgrade {
-		default          upgrade;
-		
-		# See http://nginx.org/en/docs/http/ngx_http_upstream_module.html#keepalive
-		''               '';
-		
-	}
-	
-	server_name_in_redirect off;
-	port_in_redirect        off;
-	
-	ssl_protocols TLSv1.2 TLSv1.3;
-	
-	ssl_early_data off;
-	
-	# turn on session caching to drastically improve performance
-	
-	ssl_session_cache shared:SSL:10m;
-	ssl_session_timeout 10m;
-	
-	# allow configuring ssl session tickets
-	ssl_session_tickets off;
-	
-	# slightly reduce the time-to-first-byte
-	ssl_buffer_size 4k;
-	
-	# allow configuring custom ssl ciphers
-	ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
-	ssl_prefer_server_ciphers on;
-	
-	ssl_ecdh_curve auto;
-	
-	# PEM sha: f3ddd4787553bb2f4c87e6f639a0cb3280f2e68e
 	ssl_certificate     nginx-selfsigned.crt;
 	ssl_certificate_key nginx-selfsigned.key;
-	
-	proxy_ssl_session_reuse on;
-
-	# Cache for internal auth checks
-	proxy_cache_path /tmp/nginx-cache-auth levels=1:2 keys_zone=auth_cache:10m max_size=128m inactive=30m use_temp_path=off;
 	
 	server {
 		server_name _;
@@ -144,6 +23,5 @@ http {
 			return 200 'Hello';
 			add_header Content-Type "text/plain" always;
 		}
-		
 	}
 }
