--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,11 @@ http {
 	ssl_certificate     nginx-selfsigned.crt;
 	ssl_certificate_key nginx-selfsigned.key;
 	
+	# Set to 1, this breaks almost immediately
+	#keepalive_requests 1;
+	# Set to a high number, it allows many requests
+	keepalive_requests 10000000;
+	
 	server {
 		server_name _;
 		listen 8080  ;
